@@ -742,6 +742,8 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8795. Improve InvalidateBlocks#node2blocks. (yliu)
 
+    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
